--- a/src/pages/Info.css
+++ b/src/pages/Info.css
@@ -1,5 +1,17 @@
+.container-info {
+  padding: 0 1rem;
+  margin: 0;
+}
 
-container p {
-    color: white;
-    font-size: 10px;
+.container-info p {
+  font-size: 20px;
+  margin: 0;
+  padding: 0;
+  line-height: 1.6;
+}
+
+@media (max-width: 768px) {
+  .container-info p {
+    font-size: 20px;
+  }
 }
