--- a/src/pages/Projects.css
+++ b/src/pages/Projects.css
@@ -1,7 +1,7 @@
 .projects-container {
   padding: 2rem 1rem;
   color: #ddd;
-  font-family: 'Zain', sans-serif;
+  font-family: 'Poppins-Thin', sans-serif;
   min-height: 100vh;
 }
 
